# MoneyTracker

./: .gitignore  CMakeLists.txt  Menu.hpp  builder.sh  main.cpp  modulesBuilder.sh  testRunner.cpp
Source/: Category.cpp  FileManager.cpp  Manager.cpp  Menu.cpp  Printer.cpp  Transaction.cpp  TransactionsManager.cpp
Source/Headers/: Category.hpp  FileManager.hpp  Manager.hpp  Menu.hpp  Printer.hpp  Transaction.hpp  TransactionsManager.hpp
